--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
   </a>
 </div>
 <div class="col mt-3">
-  <a href="img/gallery/thumbnail/7.jpeg" data-toggle="lightbox" data-caption="Tito Abdullah5" data-gallery="mygallery">
-    <img src="img/gallery/thumbnail/7.jpeg" alt="Tito Abdullah5" class="img-fluid w-100 h-100 rounded">
+  <a href="img/gallery/thumbnail/Topet2.jpeg" data-toggle="lightbox" data-caption="Tito Abdullah5" data-gallery="mygallery">
+    <img src="img/gallery/thumbnail/Topet2.jpeg" alt="Tito Abdullah5" class="img-fluid w-100 h-100 rounded">
   </a>
 </div>
 
