--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     */
     (function( ) { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = 'https://wedding2-1.disqus.com/embed.js';
+    s.src = 'https://github.com/BeniNuryahya10/website-personal//embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
