--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="col-8 text-end">
               <h3>Tito Abdullah</h3>
               <p>
-                Lahir Pada Tanggal 22 Oktober 2001
+                Lahir Pada Tanggal 27 Desember 2001
               </p>
               <p>
                 Putra Dari Bpk. Saha <br />
@@ -388,7 +388,7 @@
     */
     (function( ) { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = 'https://github.com/BeniNuryahya10/website-personal//embed.js';
+    s.src = 'https://wedding2-1.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
@@ -472,7 +472,7 @@
 
 <div id="audio-container">
   <audio id="song" autoplay loop>
-    <source src="audio/Lovely - Billie Eilish ft. Khalid (Lirik Lagu Terjemahan).mp3" type="audio/mp3">
+    <source src="audio/Westlife Beautiful In White.mp3" type="audio/mp3">
   </audio>
 
   <div class="audio-icon-wrapper" style="display: none;">
