--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               Kecamatan Purwadadi, Kabupaten Subang
             </p>
 <!-- ini buat peta widht 100% height nya 200% -->
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.5049974854323!2d107.69224030000001!3d-6.4575166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e693fb047859315%3A0xe706fc620a02e3ae!2sPerumahan%20Bella%20Residence!5e0!3m2!1sid!2sid!4v1705752293663!5m2!1sid!2sid" width="100" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.5049974854323!2d107.69224030000001!3d-6.4575166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e693fb047859315%3A0xe706fc620a02e3ae!2sPerumahan%20Bella%20Residence!5e0!3m2!1sid!2sid!4v1705752293663!5m2!1sid!2sid" width="100%" height="200%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <a
               href="https://maps.app.goo.gl/PnqvHbLqr36wqTvB6"
               target="_blank"
@@ -386,9 +386,9 @@
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
-    (function( ) { // DON'T EDIT BELOW THIS LINE
+     (function( ) { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = 'https://beninuryahya10.github.io/website-personal/embed.js';
+    s.src = 'https://wedding2-1.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
