--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
               Kecamatan Purwadadi, Kabupaten Subang
             </p>
 <!-- ini buat peta widht 100% height nya 200% -->
-   <a
-              href="https://maps.app.goo.gl/PnqvHbLqr36wqTvB6"
+            
+   <a href="https://maps.app.goo.gl/PnqvHbLqr36wqTvB6"
               target="_blank"
               class="btn btn-light btn-sm my-3"
               >Klik Buka Peta</a
