--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
     */
      (function( ) { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.url = 'https://beninuryahya10.github.io/website-personal/embed.js';
+    this.page.url = 'https://beninuryahya10.github.io/website-personal/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<script id="dsq-count-scr" url="//https://beninuryahya10.github.io/website-personal/count.js" async></script>
+<script id="dsq-count-url" url="//https://beninuryahya10.github.io/website-personal/count.js" async></script>
 </div>
   </div>
 </div>
