--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     */
      (function( ) { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    this.page.url = 'https://beninuryahya10.github.io/website-personal/embed.js';
+    s.page.url = 'https://beninuryahya10.github.io/website-personal/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
