--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Thito & Mutia</title>
+    <title>Thito & Vera</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,7 +35,7 @@
     >
       <main>
         <h4>Kepada  <span>Bapa/Ibu/Saudara/,</span></h4>
-        <h1>Tito Abdullah & Mutiara Arimbi</h1>
+        <h1>Tito Abdullah & Vera Nurfadilah</h1>
         <p>Akan melangsungkan repsepsi pernikahan dalam :</p>
         <div class="simply-countdown"></div>
         <a href="#home" class="btn btn-lg mt-4" onclick= 'enableScroll()'>Lihat Undangan</a>
@@ -89,7 +89,7 @@
           <div class="col-md-8 text-center">
             <h2>Acara Pernikahan</h2>
             <h3>
-              Diselenggarakan pada tanggal 17 April 2024, <br />Perumahan Bella Recidence, Kecamatan Purwadadi, Kabupaten Subang jawa Barat.
+              Diselenggarakan pada tanggal 17 April 2024, <br />Dusun Blok Pilar, Kecamatan Purwadadi, Kabupaten Subang jawa Barat.
             </h3>
             <p>
               Oleh karena itu, dengan segala hormat, kami bermaksud untuk
@@ -105,7 +105,7 @@
             <div class="col-8 text-end">
               <h3>Tito Abdullah</h3>
               <p>
-                Lahir Pada Tanggal 27 Desember 2001
+                Lahir Pada Tanggal 17 Desember 2001
               </p>
               <p>
                 Putra Dari Bpk. Saha <br />
@@ -129,23 +129,24 @@
           <div class="row">
             <div class="col-4">
               <img
-                src="img/muti.jpeg"
-                alt="Mutiara Arimbi "
+                src="img/Vera2.jpg"
+                alt="Vera Nurfadilah "
                 width="40%"
                 height="50%"
                 class="img-responsive rounded-circle"
               />
             </div>
             <div class="col-8">
-              <h3>Mutiara Arimbi</h3>
+              <h3>Vera Nurfadilah</h3>
               <p>
-               Lahir Pada Tanggal 8 Oktober 2002
+               Lahir Pada Tanggal 10 Juni 2002
               </p>
               <p>
                 Putri Dari Bpk. Mertua <br />
                 dan Ibu Mertua<br />
               </p>
             </div>
+
           </div>
         </div>
       </div>
@@ -157,13 +158,13 @@
           <div class="col-md-8 col-10 text-center">
             <h2>Informasi Acara</h2>
             <p class="Alamat">
-              Alamat : Perumahan Bella Recidence. <br />
+              Alamat : Dusun Blok Pilar. <br />
               Kecamatan Purwadadi, Kabupaten Subang
             </p>
 <!-- ini buat peta widht 100% height nya 200% -->
 
 
-   <a href="https://maps.app.goo.gl/PnqvHbLqr36wqTvB6"
+   <a href="https://maps.app.goo.gl/KyKvmshaLBNxEXe46"
               target="_blank"
               class="btn btn-light btn-sm my-3"
               >Klik Buka Peta</a
@@ -237,14 +238,14 @@
     <span> 2019</span>    
   </div>
   <div class="timeline-body">
-    <p>Awal mula bertemu kami di SMA Negeri 1 Purwadadi, pada saat itu saya ( Tito ) memberanikan diri untuk mengenal lebih dekat dengan mutiara.
+    <p>Awal mula bertemu kami di SMA Negeri 1 Purwadadi, pada saat itu saya ( Tito ) memberanikan diri untuk mengenal lebih dekat dengan Vera.
 
     </p>
   </div>
 
 </li>
 <li class="timeline-inverted">
-  <div class="timeline-image" style="background-image: url(img/muti.jpeg);">
+  <div class="timeline-image" style="background-image: url(img/Vera2.jpg);">
     </div>
 <div class="timeline-panel">
   <div class="timeline-heading">
@@ -258,7 +259,7 @@
 </div>
 </li>
 <li>
-  <div class="timeline-image" style="background-image: url(img/1.jpeg);">
+  <div class="timeline-image" style="background-image: url(img/Vera1.jpg);">
     </div>
 <div class="timeline-panel">
   <div class="timeline-heading">
@@ -266,7 +267,7 @@
     <span>2024</span>    
   </div>
   <div class="timeline-body">
-    <p>Awal Tahun ini menjadi awal untuk kami membawa hubungan ini ke jenjang yang lebih serius di depan seluruh keluarga. Saya ( Tito ) dan dia ( Mutiara ) berkomitmen untuk menyempurnakan serta menjalankan ibadah terpanjang dan menua bersama
+    <p>Awal Tahun ini menjadi awal untuk kami membawa hubungan ini ke jenjang yang lebih serius di depan seluruh keluarga. Saya ( Tito ) dan dia ( Vera ) berkomitmen untuk menyempurnakan serta menjalankan ibadah terpanjang dan menua bersama
     </p>
   </div>
 </li>
@@ -292,21 +293,17 @@
 
   <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
 <div class="col mt-3">
-  <a href="img/gallery/thumbnail/2.jpeg" data-toggle="lightbox" data-caption="Tito Abdullah" data-gallery="mygallery">
-    <img src="img/gallery/thumbnail/2.jpeg" alt="Tito Abdullah" class="img-fluid w-100 h-100 rounded">
+  <a href="img/gallery/thumbnail/Vera2.jpg" data-toggle="lightbox" data-caption="Vera Nurfadilah" data-gallery="mygallery">
+    <img src="img/gallery/thumbnail/Vera2.jpg" alt="Vera Nurfadilah" class="img-fluid w-100 h-100 rounded">
   </a>
 </div>
 <div class="col mt-3">
-  <a href="img/gallery/thumbnail/3.jpeg" data-toggle="lightbox" data-caption="Tito Abdullah1" data-gallery="mygallery">
-    <img src="img/gallery/thumbnail/3.jpeg" alt="Tito Abdullah1" width="100%"
+  <a href="img/gallery/thumbnail/Vera1.jpg" data-toggle="lightbox" data-caption="Vera Nurfadilah1" data-gallery="mygallery">
+    <img src="img/gallery/thumbnail/Vera1.jpg" alt="Vera Nurfadilah1" width="100%"
                 height="100%"  class="img-fluid w-100 h-100 rounded">
                 </a>
                 </div>
-<div class="col mt-3">
-  <a href="img/gallery/thumbnail/4.jpeg" data-toggle="lightbox" data-caption="Tito Abdullah2" data-gallery="mygallery">
-    <img src="img/gallery/thumbnail/4.jpeg" alt="Tito Abdullah2" class="img-fluid w-100 h-100 rounded">
-  </a>
-</div>
+
 <div class="col mt-3">
   <a href="img/gallery/thumbnail/Toppet.jpeg" data-toggle="lightbox" data-caption="Tito Abdullah3" data-gallery="mygallery">
     <img src="img/gallery/thumbnail/Toppet.jpeg" alt="Tito Abdullah4" width="100%"
@@ -318,11 +315,7 @@
     <img src="img/gallery/thumbnail/Topet2.jpeg" alt="Tito Abdullah4"  class="img-fluid w-100 h-100 rounded">
   </a>
 </div>
-<div class="col mt-3">
-  <a href="img/gallery/thumbnail/Topet.jpeg" data-toggle="lightbox" data-caption="Tito Abdullah5" data-gallery="mygallery">
-    <img src="img/gallery/thumbnail/Topet.jpeg" alt="Tito Abdullah5" class="img-fluid w-100 h-100 rounded">
-  </a>
-</div>
+
 
   </div>
   
@@ -429,7 +422,7 @@
     <img src="img/Bri.png" alt="BRI QR" class="img-thumbnail" width="150">
     
     <p>
-      <br>123456789 - Mutiara arimbi
+      <br>123456789 - Vera Nurfadilah
  </p>
     </li>
   <li class="list-group-item">
@@ -451,7 +444,7 @@
   <div class="container">
     <div class="row">
       <div class="col text-center">
-        <small class="block">&copy; 2024 Tito Wedding</small>
+        <small class="block">&copy; 2024 Thito And Vera Wedding</small>
         <small class="block">Design by <a href="https://instagram.com/beni_nry">@BeniNry</a></small>
 
         <ul class="mt-3">
