--- a/index.html
+++ b/index.html
@@ -365,22 +365,22 @@
       </div>
 </form>
 <!-- buat komentar selamat -->
-<div class="row justify-content-center mt-5">
-  <div class="col-md-6">
-    <div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
+  <div class="row justify-content-center mt-5">
+          <div class="col-md-6">
+            <div id="disqus_thread"></div>
+            <script>
+              /**
+               *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+               *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+
+              var disqus_config = function () {
+                this.page.url = "https://github.com/BeniNuryahya10/website-personal.git/_URL with your page's canonical URL variable
+                this.page.identifier = "https://github.com/BeniNuryahya10/website-personal.git/_IDENTIFIER with your page's unique identifier variable
+              };
+              
      (function( ) { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.page.url = 'https://beninuryahya10.github.io/website-personal/embed.js';
+    s.page.url = 'https://github.com/BeniNuryahya10/website-personal.git/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
