--- a/index.html
+++ b/index.html
@@ -378,20 +378,25 @@
                 this.page.identifier = "https://github.com/BeniNuryahya10/website-personal.git/_IDENTIFIER with your page's unique identifier variable
               };
               
-     (function( ) { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.page.url = 'https://github.com/BeniNuryahya10/website-personal.git/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<script id="dsq-count-url" url="//https://beninuryahya10.github.io/website-personal/count.js" async></script>
-</div>
-  </div>
-</div>
-</div>
-</section>
+    (function () {
+                // DON'T EDIT BELOW THIS LINE
+                var d = document,
+                  s = d.createElement("script");
+                s.src = "https://website-personal-1.disqus.com/embed.js";
+                s.setAttribute("data-timestamp", +new Date());
+                (d.head || d.body).appendChild(s);
+              })();
+            </script>
+            <noscript
+              >Please enable JavaScript to view the
+              <a href="https://disqus.com/?ref_noscript"
+                >comments powered by Disqus.</a
+              ></noscript
+            >
+          </div>
+        </div>
+      </div>
+    </section>
 </section>
 
 <section id="gifts" class="gifts">
